applications/lumie/spreadsheet-svc/manifests/grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spreadsheet-svc-grpc
  namespace: lumie-spreadsheet
  labels:
    app: spreadsheet-svc
    service-type: grpc
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: spreadsheet-svc
